[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qexperiments"
version = "0.1.0"
description = "Utilities for working with qiskit_ibm_runtime"

#authors = [{name = "Your Name", email = "your.email@example.com"}]
# license = "Apache 2.0"
#readme = "README.md"
#keywords = ["example", "package"]
# dependencies = [
#     "requests >= 2.25.0",
#     "numpy >= 1.21.0"
# ]
